--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,6 +1,8 @@
 $main: #093cb5
 $white: #fff
-    
+$black: 
+
+
 body
     font-family: 'Inter', sans-serif  
 
@@ -39,3 +41,28 @@ body
         img
             margin-left: 20px
             cursor: pointer            
+
+.offer
+    &-wrap
+        display: flex
+        justify-content: space-between
+    &-left 
+        width: 40%
+    &-right
+        width: 60%
+    &-header
+        font-size: 128px
+        letter-spacing: -3px
+        color: $black
+        font-weight: 700
+        margin-bottom: 60px
+    &-desc
+        font-size: 22px
+        line-height: 30px
+        
+    //&-buttons
+    //a
+
+    &-image
+        img
+            width: 100%
