--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,8 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
   font-family: "Inter", sans-serif;
 }
@@ -41,8 +46,10 @@ body {
       -ms-flex-pack: end;
           justify-content: flex-end;
 }
-.header-menu_button {
+.header-menu {
   cursor: pointer;
+}
+.header-menu_button {
   background-color: #093cb5;
   padding: 15px 25px;
   border-radius: 50px;
@@ -58,7 +65,354 @@ body {
   color: #fff;
   margin-left: 10px;
 }
+.header-icons {
+  position: relative;
+  z-index: 99;
+}
 .header-icons img {
   margin-left: 20px;
+  cursor: pointer;
+}
+
+.offer {
+  padding-bottom: 240px;
+}
+.offer-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.offer-left {
+  width: 40%;
+}
+.offer-right {
+  width: 60%;
+}
+.offer-header {
+  font-size: 128px;
+  letter-spacing: -3px;
+  color: #000;
+  font-weight: 700;
+  margin-bottom: 60px;
+}
+.offer-desc {
+  font-size: 22px;
+  line-height: 30px;
+  color: #000;
+  margin-bottom: 100px;
+}
+.offer-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.offer-buttons a {
+  padding: 30px 60px;
+  background-color: #093cb5;
+  border-radius: 50px;
+  text-decoration: none;
+  border: 3px solid #093cb5;
+  width: 300px;
+  text-align: center;
+  margin-right: 30px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+.offer-buttons a.btn-blue {
+  background-color: #093cb5;
+  color: #fff;
+}
+.offer-buttons a.btn-blue:hover {
+  background-color: transparent;
+  color: #093cb5;
+}
+.offer-buttons a.btn-white {
+  color: #093cb5;
+  border: 3px solid transparent;
+}
+.offer-buttons a.btn-white::before {
+  content: "";
+  background-image: url("../img/CallMe.svg");
+  width: 30px;
+  height: 30px;
+  display: block;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  left: 55px;
+}
+.offer-buttons a.btn-white:hover {
+  border: 3px solid #093cb5;
+}
+.offer-image img {
+  width: 100%;
+  margin-top: -150px;
+}
+
+.why-header {
+  font-size: 96px;
+  line-height: 100px;
+  color: #fff;
+  letter-spacing: -2px;
+  margin-bottom: 150px;
+}
+.why-wrap {
+  background-image: url("../img/why-bg2.png");
+  background-repeat: no-repeat;
+  border-radius: 100px;
+  padding: 80px 100px;
+  background-size: cover;
+  background-position: center center;
+}
+.why-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.why-item {
+  width: 30%;
+}
+.why-item img {
+  margin-bottom: 25px;
+}
+.why-item p {
+  color: #fff;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+}
+.why-item p span {
+  color: rgba(251, 251, 251, 0.45);
+}
+
+.scooters {
+  padding: 250px 0;
+}
+.scooters-headwrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 130px;
+}
+.scooters-arrows {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.scooters-arrows > div {
+  background: rgba(0, 0, 0, 0.03);
+  width: 33px;
+  height: 33px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10px;
+  margin-left: 20px;
+  cursor: pointer;
+}
+.scooters-header {
+  font-size: 96px;
+  line-height: 100px;
+  letter-spacing: -2px;
+  font-weight: 700;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.scooters-item {
+  width: 40%;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 60px 60px 0;
+  background: #fbfbfb;
+  border: 1px solid rgba(0, 0, 0, 0.03);
+  -webkit-box-shadow: 0px 25px 15px rgba(155, 161, 167, 0.1997);
+          box-shadow: 0px 25px 15px rgba(155, 161, 167, 0.1997);
+  border-radius: 40px;
+}
+.scooters-left {
+  width: 45%;
+}
+.scooters-right {
+  width: 55%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  position: relative;
+}
+.scooters-text {
+  font-size: 36px;
+  line-height: 40px;
+  color: #000;
+  font-weight: 700;
+  margin-bottom: 30px;
+  margin-top: 0;
+}
+.scooters-desc {
+  font-size: 22px;
+  line-height: 30px;
+  color: #000;
+  margin-bottom: 50px;
+}
+.scooters-btn {
+  background-color: #093cb5;
+  color: #fff;
+  padding: 20px;
+  display: inline-block;
+  border-radius: 30px;
+  width: 220px;
+  cursor: pointer;
+}
+.scooters-btn_label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 15px;
+}
+.scooters-btn_label img {
+  margin-right: 10px;
+}
+.scooters-btn_label span {
+  font-size: 18px;
+  line-height: 26px;
+}
+.scooters-btn strong {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 40px;
+}
+.scooters-label {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  color: #fff;
+  font-size: 22px;
+  line-height: 30px;
+  font-weight: 700;
+  padding: 16px;
+  background-color: #FF7474;
+  -webkit-box-shadow: 0px 2.7672564983px 2.2138051987px 0px rgba(155, 161, 167, 0.02), 0px 6.6501021385px 5.3200817108px 0px rgba(155, 161, 167, 0.03), 0px 12.5215520859px 10.017241478px 0px rgba(155, 161, 167, 0.04), 0px 22.336309433px 17.8690471649px 0px rgba(155, 161, 167, 0.04), 0px 41.7776107788px 33.422088623px 0px rgba(155, 161, 167, 0.05), 0px 100px 80px 0px rgba(155, 161, 167, 0.07);
+          box-shadow: 0px 2.7672564983px 2.2138051987px 0px rgba(155, 161, 167, 0.02), 0px 6.6501021385px 5.3200817108px 0px rgba(155, 161, 167, 0.03), 0px 12.5215520859px 10.017241478px 0px rgba(155, 161, 167, 0.04), 0px 22.336309433px 17.8690471649px 0px rgba(155, 161, 167, 0.04), 0px 41.7776107788px 33.422088623px 0px rgba(155, 161, 167, 0.05), 0px 100px 80px 0px rgba(155, 161, 167, 0.07);
+  border-radius: 20px;
+}
+.scooters-image {
+  margin-top: -50px;
+}
+.slick-slide {
+  margin: 0 15px 50px;
+}
+
+.slick-list {
+  margin: 0 -15px;
+}
+
+.reviews-info {
+  width: 40%;
+}
+.reviews-header {
+  font-size: 96px;
+  font-weight: 700;
+  line-height: 100px;
+  letter-spacing: -2px;
+  color: #000;
+}
+.reviews-model {
+  color: rgba(0, 0, 0, 0.65);
+  font-size: 22px;
+  line-height: 30px;
+}
+.reviews-desc {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 40px;
+  color: #000;
+}
+.reviews-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.reviews-right {
+  width: 60%;
+}
+.reviews-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.reviews-text {
+  margin-left: 85px;
+}
+.reviews-text p {
+  color: rgba(0, 0, 0, 0.45);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 40px;
+  margin-top: 110px;
+  margin-bottom: 70px;
+}
+.reviews-text p span {
+  color: #000;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 40px;
+}
+.reviews-text span {
+  color: #000;
+  font-size: 22px;
+  font-weight: 400;
+}
+.reviews-arrows {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 250px;
+}
+.reviews-arrows > div {
+  background: rgba(0, 0, 0, 0.03);
+  width: 33px;
+  height: 33px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10px;
+  margin-right: 20px;
   cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
