--- a/sass/main.sass
+++ b/sass/main.sass
@@ -115,31 +115,26 @@ body
         color: $white
         letter-spacing: -2px
         margin-bottom: 150px
-        background-image: url("../src/img/group3.jpg")
     &-wrap
-        
+        background-image: url("../img/group3.jpg")
         background-repeat: no-repeat
         border-radius: 100px
-        padding: 80px 100px
+        padding: 80px 100px 
         background-size: cover
         background-position: center center
     &-items
         display: flex
         justify-content: space-between
-    &-block
-        
     &-item
-        width: 30%
+        margin-right: 80px
         img
-            margin-bottom: 25px
-        p
-            color: $white
-            font-weight: 700
-            font-size: 36px
-            line-height: 40px
-            span
-                color: $grey
-        
+            p
+                color: $white
+                font-weight: 700
+                font-size: 36px
+                line-height: 40px
+                span
+                    color: $grey
 
 .scooters
     padding: 250px 0
@@ -167,7 +162,7 @@ body
         font-weight: 700
         margin-top: 0
         margin-bottom: 0
-    &-slider
+    //&-slider
     &-item
         width: 40%
         display: flex !important
@@ -231,7 +226,7 @@ body
         border-radius: 20px
     &-image
         img
-        margin-top: -50px
+            margin-top: -50px
 
 .slick-slide
     margin: 0 15px 50px
@@ -262,17 +257,15 @@ body
         display: flex
     &-right
         width: 60%
-    &-slider
+    //&-slider
 
-    &-item
+    //&-item
 
     &-wrap
         display: flex
         //align-items: center
         justify-content: space-between
-    &-image
-        img
-
+    
     &-text
         margin-left: 85px
         p
